# hahabit-cli

./: README.md  generate-clients.sh  install.sh
java-client/: settings.gradle
java-client/app/: build.gradle
java-client/app/src/main/java/tech/skagedal/hahabit/cli/: App.java
java-client/app/src/test/java/tech/skagedal/hahabit/cli/: AppTest.java
java-client/hahabit/: build.gradle
java-client/hahabit/src/main/java/tech/skagedal/hahabit/cli/: App.java
java-client/hahabit/src/test/java/tech/skagedal/hahabit/cli/: AppTest.java
rust/hahabit/: Cargo.toml
rust/hahabit/openapi/: Cargo.toml  README.md
rust/hahabit/openapi/.openapi-generator/: FILES
rust/hahabit/openapi/docs/: Error.md  GetHabits200Response.md  GetHabitsForDate200Response.md  Habit.md  HabitCreateRequest.md  HabitForDate.md  HahabitApi.md
rust/hahabit/openapi/src/apis/: configuration.rs  hahabit_api.rs  mod.rs
rust/hahabit/openapi/src/models/: error.rs  get_habits_200_response.rs  get_habits_for_date_200_response.rs  habit.rs  habit_create_request.rs  habit_for_date.rs  mod.rs
rust/hahabit/src/: config.rs  main.rs
